Updates to Tools and Resources views - Pluralize labels in public Resource view - Change Browse / Search button names - fix css spelling - make css class names consistent with Principle.reference - separate helper methods for Featured Resources   and issues pages for linking to individual resources - Updated index of Featured Resources - resource link text was too long, increase truncation

--- a/app/assets/stylesheets/public-resources.css.sass
+++ b/app/assets/stylesheets/public-resources.css.sass
@@ -83,7 +83,7 @@
   font-size: 0
   button
     border: 1px solid #ccc
-    background: darken(white, 4%)
+    background: darken(white, 2%)
     display: inline-block
     padding: 8px 15px
     font-size: 12px
@@ -91,7 +91,7 @@
     position: relative
     cursor: pointer
     text-align: center
-    width: 105px
+    width: 150px
     color: #00546E
     &, &:hover
       outline: 0 !important
@@ -150,7 +150,7 @@
     padding-bottom: 5px
 
 
-.resouce-block-link
+.resource-block-link
   display: block
   padding: 20px 0
   overflow: hidden
@@ -236,8 +236,8 @@
 
 .display_shelf-header
   border-bottom: 1px solid
-  padding-bottom: 13px
-  margin-bottom: 20px
+  padding-bottom: 5px
+  margin-bottom: 25px
   &, h3
     overflow: hidden
   .view-all
@@ -326,7 +326,7 @@ a.view-all-resources
   &.display_shelf-header
     border-width: 1px
 
-  &.ungc
+  &.global_compact
     .display_shelf-header
       border-bottom-color: #00546E
       h3, .view-all
@@ -378,7 +378,7 @@ a.view-all-resources
         &:after
           border-left-color: darken(#688442, 10%)
 
-  &.anticorruption
+  &.anti_corruption
     .display_shelf-header
       border-bottom-color: #ED1C24
       h3, .view-all
@@ -391,7 +391,7 @@ a.view-all-resources
         &:after
           border-left-color: darken(#ED1C24, 10%)
 
-  &.partnerships
+  &.development
     .display_shelf-header
       border-bottom-color: #CADB2A
       h3, .view-all
@@ -404,7 +404,7 @@ a.view-all-resources
         &:after
           border-left-color: darken(#CADB2A, 10%)
 
-  &.networks
+  &.local_networks
     .display_shelf-header
       border-bottom-color: #710000
       h3, .view-all
@@ -430,7 +430,7 @@ a.view-all-resources
         &:after
           border-left-color: darken(#453058, 10%)
 
-  &.financial
+  &.financial_markets
     .display_shelf-header
       border-bottom-color: #404850
       h3, .view-all
